load-tests/setup/kit-test-10/camunda-platform-helm/charts/camunda-platform-8.2/test/unit/tasklist/golden/ingress-all-enabled.golden.yaml
---
# Source: camunda-platform/charts/tasklist/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-platform-test-tasklist
  labels: 
    app: camunda-platform
    app.kubernetes.io/name: tasklist
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.2.32"
    app.kubernetes.io/component: tasklist
  annotations: 
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-platform-test-tasklist
                port:
                  number: 80
  tls:
    - hosts:
        - local
      secretName: my-secret
